tp1/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: td-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
