tp1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: td-service
spec:
  type: ClusterIP
  selector:
    app: td-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
