tp1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: td-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /myapp
        backend:
          service:
            name: td-service
            port:
              number: 80
